    - debian/patches/any/submitted-bits-fcntl_h-at.diff: rebased.
    - debian/patches/any/unsubmitted-dlopen-static-crash.diff: obsolete.
    - debian/patches/any/local-test-install.diff: rebased.

  [ Samuel Thibault ]
  * debian/patches/hurd-i386/local-clock_gettime_MONOTONIC.diff: Refresh.
  * debian/patches/hurd-i386/submitted-net.diff: Refresh.

 -- Aurelien Jarno <aurel32@debian.org>  Sat, 08 Feb 2020 13:52:09 +0100

glibc (2.30-0experimental3) UNRELEASED; urgency=medium

  [ Samuel Thibault ]
  * testsuite-xfail-debian.mk: Update non-regressions.

  [ Aurelien Jarno ]
  * debian/patches/any/local-revert-24323.diff: drop, obsolete.
  * debian/control.in/libc: add a Breaks: against wcc (<< 0.0.2+dfsg-3).

 -- Samuel Thibault <sthibault@debian.org>  Sat, 08 Feb 2020 03:08:56 +0100

glibc (2.30-0experimental2) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.
  * debian/patches/any/submitted-stt-gnu-ifunc-detection.patch: fix
    STT_GNU_IFUNC assembler and linker detection for toolchains defaulting to
    PIE.
  * debian/sysdeps/mips*.mk: drop -no-pie.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 05 Feb 2020 23:01:35 +0100

glibc (2.30-0experimental1) experimental; urgency=medium

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-sendmsg-SCM_RIGHTS.diff: Rename to
    git-sendmsg-SCM_RIGHTS.diff.
  * patches/hurd-i386/tg-context_functions.diff: Rename to
    git-context_functions.diff.
  * patches/hurd-i386/tg-hurdsig-fixes.diff: Rename to git-hurdsig-fixes.diff.
  * patches/hurd-i386/tg-hurdsig-global-dispositions.diff: Rename to
    git-hurdsig-global-dispositions.diff, refresh.
  * patches/hurd-i386/local-hurdsig-globaldisp-version.diff: Rename to
    git-hurdsig-globaldisp-version.diff.
  * patches/hurd-i386/tg-hurdsig-fixes-2.diff: Rename to
    git-hurdsig-fixes-2.diff.
  * patches/hurd-i386/tg-hurdsig-boot-fix.diff: Rename to
    git-hurdsig-boot-fix.diff.