@@ -391,17 +391,17 @@ test-xfail-tst-pututxline-lockfail = yes
 test-xfail-tst-updwtmpx = yes
 
 # new in 2.31
-#test-xfail-tst-auditmany = yes
-#test-xfail-tst-dlopenfail = yes
+test-xfail-tst-auditmany = yes
+test-xfail-tst-dlopenfail = yes
 
 # actually never succeded
-#test-xfail-tst-create_format1 = yes
-#test-xfail-tst-getcwd-abspath = yes
+test-xfail-tst-create_format1 = yes
+test-xfail-tst-getcwd-abspath = yes
 # Assumes that self-locks are exclusive
-#test-xfail-tst-lockf = yes
+test-xfail-tst-lockf = yes
 
 # assumes that all st_mode flags (32bit) can exist in stx_mode flags (16bit)
-#test-xfail-tst-statx = yes
+test-xfail-tst-statx = yes
 
 endif
 
