@@ -48,6 +48,7 @@ glibc (2.31-0experimental0) UNRELEASED; urgency=medium
   [ Samuel Thibault ]
   * debian/patches/hurd-i386/local-clock_gettime_MONOTONIC.diff: Refresh.
   * debian/patches/hurd-i386/submitted-net.diff: Refresh.
+  * debian/testsuite-xfail-debian.mk: Update hurd-i386 results.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sat, 08 Feb 2020 13:52:09 +0100
 
